ghc-4335c07/testsuite/tests/typecheck/should_fail/T11724.hs
{-# LANGUAGE TypeInType #-}

module T11724 where

import GHC.Exts

data Foo (r :: RuntimeRep) (a :: TYPE r) = Foo a
