ghc-4335c07/testsuite/tests/typecheck/should_fail/T11724.stderr

T11724.hs:7:44: error:
    • A levity-polymorphic type is not allowed here:
        Type: a
        Kind: TYPE r
    • In the definition of data constructor ‘Foo’
      In the data type declaration for ‘Foo’
